tests/parse_error/lonely_comparison.ll
1 == 2 // a comparison by itself doesn't qualify as an instruction
